# settle

./: .gitignore  BENCHMARKS.md  Cargo.toml  PLAN.md  README.md  RFC_SETTLE_STREAM.md
.github/workflows/: tests.yml
benches/: profile_backfill.rs  profile_breakdown.rs  profile_phases.rs  profile_polymarket.rs  profile_polymarket_realistic.rs  profile_settle_mv_only.rs  profile_settle_simple_agg.rs  throughput.rs  vs_postgres_raw.rs  vs_postgres_reorg.rs  vs_postgres_simple_agg.rs  vs_postgres_stateful.rs
benches/common/: mod.rs
bindings/typescript/delta-db/src/: delta-db.ts
bindings/typescript/delta-db/src/native/: native.d.ts
bindings/typescript/settle/: .gitignore  README.md  biome.json  build-all.sh  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  vitest.config.ts
bindings/typescript/settle-stream/: .gitignore  README.md  package.json
bindings/typescript/settle-stream/bench/: benchmark-reducers.ts
bindings/typescript/settle-stream/examples/: polymarket-pipe.example.ts  polymarket-pipe.ts  settle-stream-target.test.ts  settle-stream-target.ts
bindings/typescript/settle-stream/src/: builder.ts  ddl.ts  index.ts  pipeline.ts  settle-stream.ts
bindings/typescript/settle-stream/src/native/: native.d.ts  native.js
bindings/typescript/settle-stream/tests/: external-reducer.test.ts
bindings/typescript/settle/bench/: benchmark-reducers.ts
bindings/typescript/settle/examples/: polymarket-pipe.example.ts  polymarket-pipe.ts  settle-target.test.ts  settle-target.ts
bindings/typescript/settle/npm/darwin-arm64/: package.json
bindings/typescript/settle/npm/darwin-x64/: package.json
bindings/typescript/settle/npm/linux-arm64-gnu/: package.json
bindings/typescript/settle/npm/linux-x64-gnu/: package.json
bindings/typescript/settle/npm/wasm/: package.json  stream.js
bindings/typescript/settle/scripts/: publish.sh  test-install.sh
bindings/typescript/settle/src/: builder.ts  column.ts  ddl.ts  errors.ts  index.ts  pipeline.ts  settle.ts  web.ts
bindings/typescript/settle/src/native/: native.d.ts  native.js
bindings/typescript/settle/src/wasm/: settle.d.ts  settle.js
bindings/typescript/settle/tests/: builder.test.ts  external-reducer.test.ts  types.test.ts  uniswap-pipeline.test.ts  util.ts  web.test.ts
docs/: API_SURFACE.md  backfill-mode-design.md
src/: backfill_tests.rs  change.rs  db.rs  db_core_tests.rs  db_external_tests.rs  db_rollback_tests.rs  db_test_helpers.rs  db_validation_tests.rs  error.rs  lib.rs  msgpack_conv.rs  napi.rs  test_helpers.rs  types.rs  wasm.rs
src/engine/: dag.rs  mv.rs  mv_core_tests.rs  mv_sliding_tests.rs  raw_table.rs  reducer.rs
src/pipeline/: codegen.rs  column.rs  ddl.rs  handles.rs  mod.rs
src/schema/: ast.rs
src/storage/: mod.rs  rocks.rs
tests/: pipeline_rust.rs
tests/dex/: tests.rs
tests/e2e/: ack_durability.rs  fork.rs  main.rs
tests/e2e/common/: mod.rs  pg.rs
tests/integration/: ack_durability.rs  buffering.rs  crash_recovery.rs  dedup.rs  fork.rs  main.rs
tests/integration/common/: mod.rs
tests/polymarket/: tests.rs
tests/sliding/: tests.rs
tests/uniswap/: tests.rs
