[package]
name = "settle-stream"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sqlparser = { version = "0.55", features = ["visitor"] }
rmp-serde = "1"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
rocksdb = "0.22"
rustc-hash = "2"
smallvec = { version = "1", features = ["serde"] }
rayon = "1"
napi = { version = "2", features = ["napi9", "serde-json"], optional = true }
napi-derive = { version = "2", optional = true }
ethnum = "1.5.2"

[build-dependencies]
napi-build = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[[test]]
name = "dex"
path = "tests/dex/tests.rs"

[[test]]
name = "uniswap"
path = "tests/uniswap/tests.rs"

[[test]]
name = "polymarket"
path = "tests/polymarket/tests.rs"

[[test]]
name = "sliding"
path = "tests/sliding/tests.rs"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "profile_polymarket"
harness = false

[[bench]]
name = "profile_breakdown"
harness = false
