[package]
name = "settle"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sqlparser = { version = "0.55", features = ["visitor"] }
rmp-serde = "1"
mlua = { version = "0.10", features = ["lua54", "vendored"], optional = true }
rocksdb = { version = "0.22", optional = true }
rustc-hash = "2"
smallvec = { version = "1", features = ["serde"] }
rayon = { version = "1", optional = true }
napi = { version = "2", features = ["napi9", "serde-json"], optional = true }
napi-derive = { version = "2", optional = true }
ethnum = "1.5.2"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[build-dependencies]
napi-build = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
# Default features for native (Node.js) builds.
# For WASM builds use: --no-default-features --features wasm
default = ["lua", "rocksdb", "rayon"]
lua = ["dep:mlua"]
rocksdb = ["dep:rocksdb"]
rayon = ["dep:rayon"]
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:serde-wasm-bindgen"]

[[test]]
name = "dex"
path = "tests/dex/tests.rs"

[[test]]
name = "uniswap"
path = "tests/uniswap/tests.rs"

[[test]]
name = "polymarket"
path = "tests/polymarket/tests.rs"

[[test]]
name = "sliding"
path = "tests/sliding/tests.rs"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "profile_polymarket"
harness = false

[[bench]]
name = "profile_breakdown"
harness = false

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
strip = true
codegen-units = 1
