[package]
name = "settle"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sqlparser = { version = "0.55", features = ["visitor"] }
rmp-serde = "1"
mlua = { version = "0.10", features = ["lua54", "vendored"], optional = true }
rocksdb = { version = "0.22", optional = true }
rustc-hash = "2"
smallvec = { version = "1", features = ["serde"] }
rayon = { version = "1", optional = true }
napi = { version = "2", features = ["napi9", "serde-json"], optional = true }
napi-derive = { version = "2", optional = true }
ethnum = "1.5.2"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
tracing = "0.1"
web-time = "1"
# Faster allocator for the hot ingest path (small per-event map/Vec churn).
# Default-on for native builds; gated off for wasm (its C core won't compile
# on wasm32) via the #[global_allocator] cfg in lib.rs. A/B: +13-15% on the
# simple_agg / polymarket pipelines vs the system allocator.
mimalloc = { version = "0.1", optional = true }

[build-dependencies]
napi-build = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
# End-to-end tests in `tests/e2e/` spin up a real Postgres container via
# testcontainers. Requires a running Docker daemon — `cargo test --tests`
# will run them. Filter with `cargo test --test integration` to skip the
# Docker-dependent suite.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
anyhow = "1"

[features]
# Default features for native (Node.js) builds.
# For WASM builds use: --no-default-features --features wasm
default = ["lua", "rocksdb", "rayon", "mimalloc"]
lua = ["dep:mlua"]
rocksdb = ["dep:rocksdb"]
rayon = ["dep:rayon"]
mimalloc = ["dep:mimalloc"]
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:serde-wasm-bindgen"]

[[test]]
name = "e2e"
path = "tests/e2e/main.rs"

[[test]]
name = "integration"
path = "tests/integration/main.rs"

[[test]]
name = "dex"
path = "tests/dex/tests.rs"

[[test]]
name = "uniswap"
path = "tests/uniswap/tests.rs"

[[test]]
name = "polymarket"
path = "tests/polymarket/tests.rs"

[[test]]
name = "sliding"
path = "tests/sliding/tests.rs"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "profile_polymarket"
harness = false

[[bench]]
name = "profile_breakdown"
harness = false

[[bench]]
name = "vs_postgres_raw"
harness = false

[[bench]]
name = "vs_postgres_simple_agg"
harness = false

[[bench]]
name = "vs_postgres_stateful"
harness = false

[[bench]]
name = "profile_settle_simple_agg"
harness = false

[[bench]]
name = "profile_settle_mv_only"
harness = false

[[bench]]
name = "profile_phases"
harness = false

[[bench]]
name = "profile_polymarket_realistic"
harness = false

[[bench]]
name = "profile_backfill"
harness = false

[profile.bench]
debug = true

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
strip = true
codegen-units = 1
